--- a/public/index.css
+++ b/public/index.css
@@ -190,4 +190,40 @@ hr {
     background-color:#60b0e1;
     opacity: 0.5;
     height: 1px;
-  }
+}
+.main_logged_in{
+    display: flex;
+    height: 97vh;
+    flex-direction:column;
+}
+.header_wrapper{
+    width:100%;
+    height:50px;
+    align-items: center;
+    display:flex;
+    justify-content: flex-end;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+.game_wrapper{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 95%;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 5px 6px 2px;
+
+}
+.logout_button{
+    
+    padding-right: 15px;
+    color:#2f598c
+}
+.logout_button:hover{
+    color: #60b0e1;
+    cursor:pointer;
+
+}
+.game_canvas{
+    height: 98%;
+    width: 100%;
+}
