--- a/public/index.css
+++ b/public/index.css
@@ -208,9 +208,9 @@ hr {
 .game_wrapper{
     align-items: center;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
-    height: 95%;
+    /* height: 95%; */
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 5px 6px 2px;
 
 }
